[gd_scene load_steps=2 format=3 uid="uid://mainmenu001"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.22, 0.12, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(400, 0)
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Age of Empires Mobile"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="Subtitle" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "Isometric RTS"
horizontal_alignment = 1
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 18

[node name="Spacer" type="Control" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="DifficultyLabel" type="Label" parent="CenterContainer/VBox"]
layout_mode = 2
text = "AI Difficulty"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16

[node name="DifficultyOption" type="OptionButton" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 48)
theme_override_font_sizes/font_size = 16

[node name="Spacer2" type="Control" parent="CenterContainer/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 12)

[node name="StartButton" type="Button" parent="CenterContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
text = "Start Skirmish"
theme_override_font_sizes/font_size = 22
